Table overflow fully fixed

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -43,10 +43,6 @@ main {
     overflow: hidden;
 }
 
-article section {
-	overflow: scroll;
-}
-
 
  //**********************
 // TEXT RELATED ELEMENTS
